src/libqstyleoption.bf

public struct QStyleOptionViewItem
{
	[LinkName("QStyleOptionViewItem_new")]
	public static extern void* QStyleOptionViewItem_new();
	[LinkName("QStyleOptionViewItem_new2")]
	public static extern void* QStyleOptionViewItem_new2(QStyleOptionViewItem other);
}
public struct QStyleOptionToolBox
{
	[LinkName("QStyleOptionToolBox_new")]
	public static extern void* QStyleOptionToolBox_new();
	[LinkName("QStyleOptionToolBox_new2")]
	public static extern void* QStyleOptionToolBox_new2(QStyleOptionToolBox other);
}
public struct QStyleOptionRubberBand
{
	[LinkName("QStyleOptionRubberBand_new")]
	public static extern void* QStyleOptionRubberBand_new();
	[LinkName("QStyleOptionRubberBand_new2")]
	public static extern void* QStyleOptionRubberBand_new2(QStyleOptionRubberBand other);
}
public struct QStyleOptionComplex
{
	[LinkName("QStyleOptionComplex_new")]
	public static extern void* QStyleOptionComplex_new();
	[LinkName("QStyleOptionComplex_new2")]
	public static extern void* QStyleOptionComplex_new2(QStyleOptionComplex other);
	[LinkName("QStyleOptionComplex_new3")]
	public static extern void* QStyleOptionComplex_new3(int32 version);
	[LinkName("QStyleOptionComplex_new4")]
	public static extern void* QStyleOptionComplex_new4(int32 version, int32 typeVal);
}
public struct QStyleOptionSlider
{
	[LinkName("QStyleOptionSlider_new")]
	public static extern void* QStyleOptionSlider_new();
	[LinkName("QStyleOptionSlider_new2")]
	public static extern void* QStyleOptionSlider_new2(QStyleOptionSlider other);
}
public struct QStyleOptionSpinBox
{
	[LinkName("QStyleOptionSpinBox_new")]
	public static extern void* QStyleOptionSpinBox_new();
	[LinkName("QStyleOptionSpinBox_new2")]
	public static extern void* QStyleOptionSpinBox_new2(QStyleOptionSpinBox other);
}
public struct QStyleOptionToolButton
{
	[LinkName("QStyleOptionToolButton_new")]
	public static extern void* QStyleOptionToolButton_new();
	[LinkName("QStyleOptionToolButton_new2")]
	public static extern void* QStyleOptionToolButton_new2(QStyleOptionToolButton other);
}
public struct QStyleOptionComboBox
{
	[LinkName("QStyleOptionComboBox_new")]
	public static extern void* QStyleOptionComboBox_new();
	[LinkName("QStyleOptionComboBox_new2")]
	public static extern void* QStyleOptionComboBox_new2(QStyleOptionComboBox other);
}
public struct QStyleOptionTitleBar
{
	[LinkName("QStyleOptionTitleBar_new")]
	public static extern void* QStyleOptionTitleBar_new();
	[LinkName("QStyleOptionTitleBar_new2")]
	public static extern void* QStyleOptionTitleBar_new2(QStyleOptionTitleBar other);
}
public struct QStyleOptionGroupBox
{
	[LinkName("QStyleOptionGroupBox_new")]
	public static extern void* QStyleOptionGroupBox_new();
	[LinkName("QStyleOptionGroupBox_new2")]
	public static extern void* QStyleOptionGroupBox_new2(QStyleOptionGroupBox other);
}
public struct QStyleOptionSizeGrip
{
	[LinkName("QStyleOptionSizeGrip_new")]
	public static extern void* QStyleOptionSizeGrip_new();
	[LinkName("QStyleOptionSizeGrip_new2")]
	public static extern void* QStyleOptionSizeGrip_new2(QStyleOptionSizeGrip other);
}
public struct QStyleOptionGraphicsItem
{
	[LinkName("QStyleOptionGraphicsItem_new")]
	public static extern void* QStyleOptionGraphicsItem_new();
	[LinkName("QStyleOptionGraphicsItem_new2")]
	public static extern void* QStyleOptionGraphicsItem_new2(QStyleOptionGraphicsItem other);
	[LinkName("QStyleOptionGraphicsItem_LevelOfDetailFromTransform")]
	public static extern double QStyleOptionGraphicsItem_LevelOfDetailFromTransform(QTransform worldTransform);
}
public struct QStyleHintReturn
{
	[LinkName("QStyleHintReturn_new")]
	public static extern void* QStyleHintReturn_new();
	[LinkName("QStyleHintReturn_new2")]
	public static extern void* QStyleHintReturn_new2(QStyleHintReturn param1);
	[LinkName("QStyleHintReturn_new3")]
	public static extern void* QStyleHintReturn_new3(int32 version);
	[LinkName("QStyleHintReturn_new4")]
	public static extern void* QStyleHintReturn_new4(int32 version, int32 typeVal);
	[LinkName("QStyleHintReturn_OperatorAssign")]
	public static extern void QStyleHintReturn_OperatorAssign(void* c_this, QStyleHintReturn param1);
}
public struct QStyleHintReturnMask
{
	[LinkName("QStyleHintReturnMask_new")]
	public static extern void* QStyleHintReturnMask_new();
	[LinkName("QStyleHintReturnMask_new2")]
	public static extern void* QStyleHintReturnMask_new2(QStyleHintReturnMask param1);
	[LinkName("QStyleHintReturnMask_OperatorAssign")]
	public static extern void QStyleHintReturnMask_OperatorAssign(void* c_this, QStyleHintReturnMask param1);
}
public struct QStyleHintReturnVariant
{
	[LinkName("QStyleHintReturnVariant_new")]
	public static extern void* QStyleHintReturnVariant_new();
	[LinkName("QStyleHintReturnVariant_new2")]
	public static extern void* QStyleHintReturnVariant_new2(QStyleHintReturnVariant param1);
	[LinkName("QStyleHintReturnVariant_OperatorAssign")]
	public static extern void QStyleHintReturnVariant_OperatorAssign(void* c_this, QStyleHintReturnVariant param1);
}